# Avatar

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml
docs/backend/: 模型运行环境.md  状态层级梳理.md
docs/frontend/: Soul_example.md  全局错误处理.md  前端结构说明.md
src/avatar/: __init__.py  exceptions.py
src/avatar/agents/: __init__.py  agent_context.py  model_factory.py  react_agent.py
src/avatar/agents/hooks/: __init__.py  memory_compaction.py
src/avatar/agents/memory/: __init__.py
src/avatar/agents/model_factory/: formatter.py
src/avatar/agents/tools/: __init__.py  shell.py  weather_test.py
src/avatar/agents/utils/: __init__.py  token_counter.py
src/avatar/app/: __init__.py  _agent_app.py  _app.py  _lifespan.py  agent_context.py  middlewares.py  multi_agent_manager.py
src/avatar/app/agent_manager/: __init__.py  agent_manager.py  service_factories.py
src/avatar/app/auth/: __init__.py  dependencies.py  models.py  service.py  (+1 more)
src/avatar/cli/: app_cmd.py  main.py
src/avatar/config/: __init__.py  agent_config.py  app_config.py  base_config.py  runnning_config.py  settings.py  user_config.py
tests/agents/tools/: test_shell.py
tests/app/: test_auth_router.py  test_file_system_router.py  test_skills_hub_router.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: app-sidebar.tsx  auth-routes.tsx
web/src/hooks/: use-agent-selection.tsx  use-auth.tsx  use-error-handler.tsx
web/src/lib/: agent-selection.ts  auth-api.ts  file-system-api.ts
(+49 files in other folders)
