[project]
name = "avatar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lywy233", email = "lywy233@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agentscope>=1.0.18",
    "agentscope-runtime>=1.1.3",
    "click>=8.3.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
avatar = "avatar.cli.main:cli"
